--- a/vignettes/adam-clinical-dataset.Rmd
+++ b/vignettes/adam-clinical-dataset.Rmd
@@ -6,28 +6,88 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-```{r app}
-code <- 'library(shiny)
-ui <- fluidPage(sliderInput("n","Bins",1,50,30), plotOutput("p"))
-server <- function(input, output, session) {
-  output$p <- renderPlot(hist(rnorm(1000), breaks=input$n))
-}
-shinyApp(ui, server)'
-url <- roxy.shinylive::create_shinylive_url(code)
-url
+## 1. Loading ADaM/Clinical data
 
+`dataviewR` enables efficient exploration of large datasets. It allows users to load ADaM data such as ADSL, ADAE, and ADLB along with their corresponding SDTM datasets simultaneously, making it easier to investigate issues in detail and ensure traceability.
+
+User can load ADaM data like explained in the previous sections. In this section we will be looking at how we can use `dataviewR` to explore clinical data.
+
+## 2. Loading data and filtering data of our interest
+
+For this section, adsl and adlb is loaded
+
+```r
+id <- dataviewer(mtcars, iris)
+dataviewer(adsl, adlb)
 ```
+Suppose we want to examine safety population subjects with high hemoglobin and review how their hemoglobin values were recorded. With `dataviewR`, this can be done within seconds.
 
+<p align="center" style="font-style: italic;">
+  Hover to see how easily we can explore the data according to our specific interests
+</p>
 
-```{r, echo = FALSE, out.width = '150%', out.extra = 'style = "position: relative; z-index:1"', eval = requireNamespace("roxy.shinylive", quietly = TRUE) && knitr::is_html_output()}
+<p align="center">
+<video 
+  src="figures/adlb1.mp4"
+  width="85%"
+  muted
+  playsinline
+  onmouseover="this.loop = true; this.play()"
+  onmouseout="this.loop = false; this.pause(); this.currentTime = 0;">
+</video>
+</p>
 
-code <- paste0(c(
-  "interactive <- function() TRUE",
-  knitr::knit_code$get("app")
-), collapse = "\n")
+Users can simultaneously explore a specific subject across both ADLB and ADSL. For example, if we want to review cholesterol values for a subject older than 64, With `dataviewR`  we can quickly explore that.
 
-url <- roxy.shinylive::create_shinylive_url(code)
-knitr::include_url(url, height = "800px")
-url
-```
+<p align="center" style="font-style: italic;">
+ Hover to see how easily we can explore the data according to our specific interests
+</p>
 
+<p align="center">
+<video 
+  src="figures/adlb2.mp4"
+  width="85%"
+  muted
+  playsinline
+  onmouseover="this.loop = true; this.play()"
+  onmouseout="this.loop = false; this.pause(); this.currentTime = 0;">
+</video>
+</p>
+
+## 3. Investigating missing values
+
+Suppose user wants to explore whether the variable has missing values, for character variables user can easily filter missing values from quick filters which will be visible as *<NA>*. For numerical variables it is displayed as blank cell, which cannot be filtered from quick filters in the current version.That shall be resolved in the next version.
+<p align="center" style="font-style: italic;">
+  In the below picture we can see how NA values are visible in the quick filter
+</p>
+<p align="center"> <img src="figures/na1.PNG" width="85%" alt="dataviewR import panel"> </p>
+
+<p align="center" style="font-style: italic;">
+ In the below picture we can see how missible values are displayed in the data.
+</p>
+<p align="center"> <img src="figures/na.PNG" width="85%" alt="dataviewR import panel"> </p>
+
+## 4. Exploring metadata - crucial step in ADaM
+
+In addition to the data exploration, user can also make sure the metadata is correct as per the need. 
+
+For the better experience, user is requested to use the available pop-up option next to **Attribute info:** text.
+
+<p align="center" style="font-style: italic;">
+ Hover to see how easily we can explore the data according to our specific interests
+</p>
+
+<p align="center">
+<video 
+  src="figures/adlb3.mp4"
+  width="85%"
+  muted
+  playsinline
+  onmouseover="this.loop = true; this.play()"
+  onmouseout="this.loop = false; this.pause(); this.currentTime = 0;">
+</video>
+</p>
+
+## Next article
+
+Continue with: [Exporting data and Wrapping Up the Session](Exporting-and-Reproducibility.html)
